# PetrolEngineCore

./: .gitignore  .gitmodules  CMakeLists.txt
src/: PCH.h
src/Core/: Atlas.h  EventStack.h  Image.h  Logger.h  ResourceManager.h  layerStack.h
src/Core/Renderer/: Framebuffer.h  IndexBuffer.h  Renderer.h  RendererResourceCreator.h  Shader.h  Texture.h  UniformBuffer.h  VertexArray.h  VertexBuffer.h
src/Core/Window/: Window.cpp  Window.h  WindowResourceCreator.h
